fix scroll smoth flicker & fix some css

--- a/Frontend/src/app/posts/components/post-list/post-list.component.css
+++ b/Frontend/src/app/posts/components/post-list/post-list.component.css
@@ -53,5 +53,8 @@ virtual-scroller {
   .suggestion-component{
     display: none;
   }
+  .post-section {
+    margin: 0;
+  }
 
 }
